# shesh

./: Cargo.toml  Makefile  README.md
src/: b_core.rs  b_mod.rs  b_symbols.rs  builtins.rs  completion.rs  completions.rs  config.rs  main.rs  parse.rs  process_exec.rs  prompt.rs  shell.rs  utils.rs  validator.rs
src/commands/: core.rs  mod.rs  symbols.rs
